Bug 158171 - Crash on "Reply" after removing/adding "Favorite Folders" to the window layout
Summary: Crash on "Reply" after removing/adding "Favorite Folders" to the window layout
Status: RESOLVED FIXED
Alias: None
Product: kmail
Classification: Unmaintained
Component: general (other bugs)
Version First Reported In: SVN trunk (KDE 4)
Platform: unspecified Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-02-21 16:44 UTC by Stephan Johach
Modified: 2008-02-25 16:37 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Stephan Johach 2008-02-21 16:44:31 UTC
Version:           1.9.9 (using 3.5.9, compiled sources)
Compiler:          Target: i686-pc-linux-gnu
OS:                Linux (i686) release 2.6.23.12

Since 3.5.9 KMail crahes if I do the following.

- Start KMail
- Deactivate "Show favorite folder view" in settings
- Close settings dialog
- Type "r" to reply to the current message

After a restart no crashes. You can also trigger it when
activating "Show favorite folder view" and go on as above.

This is the backtrace I get in both cases.

Using host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1243650384 (LWP 13807)]
[New Thread -1289647184 (LWP 13811)]
[New Thread -1281254480 (LWP 13810)]
[New Thread -1272861776 (LWP 13809)]
[New Thread -1264469072 (LWP 13808)]
[KCrash handler]
#6  0xb4e71483 in KMReaderWin::copyText ()
   from /opt/kde-3.5/lib/libkmailprivate.so
#7  0xb514388d in KMail::MessageActions::slotReplyToMsg ()
   from /opt/kde-3.5/lib/libkmailprivate.so
#8  0xb5143b0a in KMail::MessageActions::qt_invoke ()
   from /opt/kde-3.5/lib/libkmailprivate.so
#9  0xb6648619 in QObject::activate_signal ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#10 0xb6648ab0 in QObject::activate_signal ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#11 0xb6f2dc69 in KAction::activated () from /opt/kde-3.5/lib/libkdeui.so.4
#12 0xb6f2ddc1 in KAction::slotActivated () from /opt/kde-3.5/lib/libkdeui.so.4
#13 0xb6f33def in KAction::qt_invoke () from /opt/kde-3.5/lib/libkdeui.so.4
#14 0xb6648619 in QObject::activate_signal ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#15 0xb6648ab0 in QObject::activate_signal ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#16 0xb6cc42a9 in KAccelPrivate::menuItemActivated ()
   from /opt/kde-3.5/lib/libkdecore.so.4
#17 0xb6cc4b47 in KAccelPrivate::emitActivatedSignal ()
   from /opt/kde-3.5/lib/libkdecore.so.4
#18 0xb6cc74fd in KAccelPrivate::eventFilter ()
   from /opt/kde-3.5/lib/libkdecore.so.4
#19 0xb664835e in QObject::activate_filters ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#20 0xb66483db in QObject::event () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#21 0xb6681f2c in QWidget::event () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#22 0xb673f302 in QMainWindow::event () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#23 0xb65e8d81 in QApplication::internalNotify ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#24 0xb65e9b3e in QApplication::notify () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#25 0xb6c2d3ae in KApplication::notify () from /opt/kde-3.5/lib/libkdecore.so.4
#26 0xb6cc4906 in KAccelEventHandler::x11Event ()
   from /opt/kde-3.5/lib/libkdecore.so.4
#27 0xb6c313bf in KApplication::x11EventFilter ()
   from /opt/kde-3.5/lib/libkdecore.so.4
#28 0xb6576ff5 in ?? () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#29 0xbfb894cc in ?? ()
#30 0xbfb893c8 in ?? ()
#31 0x00000001 in ?? ()
#32 0xb6a8e884 in ?? () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#33 0xb6a8e884 in ?? () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#34 0x0000001b in ?? ()
#35 0xbfb892c8 in ?? ()
#36 0xb65831dc in QApplication::x11ProcessEvent ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
Backtrace stopped: frame did not save the PC
Comment 1 Stephan Johach 2008-02-21 18:21:41 UTC
Backtrace with full debug info:

Using host libthread_db library "/lib/libthread_db.so.1".
[Thread debugging using libthread_db enabled]
[New Thread -1243228496 (LWP 6688)]
[New Thread -1290765392 (LWP 6692)]
[New Thread -1282372688 (LWP 6691)]
[New Thread -1273979984 (LWP 6690)]
[New Thread -1265587280 (LWP 6689)]
[KCrash handler]
#6  0xb4e150b9 in KMReaderWin::copyText (this=0x8554358)
    at kmreaderwin.cpp:2374
#7  0xb508dd2e in KMail::MessageActions::replyCommand<KMReplyToCommand> (
    this=0x859d8f0) at messageactions.h:67
#8  0xb508b62b in KMail::MessageActions::slotReplyToMsg (this=0x859d8f0)
    at messageactions.cpp:182
#9  0xb508db0f in KMail::MessageActions::qt_invoke (this=0x859d8f0, _id=3, 
    _o=0xbffd0fb8) at messageactions.moc:105
#10 0xb66af619 in QObject::activate_signal ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#11 0xb66afab0 in QObject::activate_signal ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#12 0xb6f94c69 in KAction::activated () from /opt/kde-3.5/lib/libkdeui.so.4
#13 0xb6f94dc1 in KAction::slotActivated () from /opt/kde-3.5/lib/libkdeui.so.4
#14 0xb6f9adef in KAction::qt_invoke () from /opt/kde-3.5/lib/libkdeui.so.4
#15 0xb66af619 in QObject::activate_signal ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#16 0xb66afab0 in QObject::activate_signal ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#17 0xb6d2b2a9 in KAccelPrivate::menuItemActivated ()
   from /opt/kde-3.5/lib/libkdecore.so.4
#18 0xb6d2bb47 in KAccelPrivate::emitActivatedSignal ()
   from /opt/kde-3.5/lib/libkdecore.so.4
#19 0xb6d2e4fd in KAccelPrivate::eventFilter ()
   from /opt/kde-3.5/lib/libkdecore.so.4
#20 0xb66af35e in QObject::activate_filters ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#21 0xb66af3db in QObject::event () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#22 0xb66e8f2c in QWidget::event () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#23 0xb67a6302 in QMainWindow::event () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#24 0xb664fd81 in QApplication::internalNotify ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
#25 0xb6650b3e in QApplication::notify () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#26 0xb6c943ae in KApplication::notify () from /opt/kde-3.5/lib/libkdecore.so.4
#27 0xb6d2b906 in KAccelEventHandler::x11Event ()
   from /opt/kde-3.5/lib/libkdecore.so.4
#28 0xb6c983bf in KApplication::x11EventFilter ()
   from /opt/kde-3.5/lib/libkdecore.so.4
#29 0xb65ddff5 in ?? () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#30 0xbffd195c in ?? ()
#31 0xbffd1858 in ?? ()
#32 0x00000001 in ?? ()
#33 0xb6af5884 in ?? () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#34 0xb6af5884 in ?? () from /opt/qt-3.3.7/lib/libqt-mt.so.3
#35 0x0000001b in ?? ()
#36 0xbffd1758 in ?? ()
#37 0xb65ea1dc in QApplication::x11ProcessEvent ()
   from /opt/qt-3.3.7/lib/libqt-mt.so.3
Backtrace stopped: frame did not save the PC
Comment 2 Thomas McGuire 2008-02-23 16:44:24 UTC
Confirmed, for both the 3.5 branch and trunk.
Comment 3 Thomas McGuire 2008-02-23 21:47:59 UTC
SVN commit 778530 by tmcguire:

Don't crash after changing the layout and replying then.

BUG: 158171


 M  +4 -0      kmmainwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=778530
Comment 4 Martin Koller 2008-02-24 13:31:42 UTC
Hi Thomas,

On Saturday 23 February 2008, you wrote:

> ------- Additional Comments From Thomas.McGuire gmx net  2008-02-23
> 21:47 ------- SVN commit 778530 by tmcguire:
>
> Don't crash after changing the layout and replying then.
>
> BUG: 158171
>
>
>  M  +4 -0      kmmainwidget.cpp
>
>
> WebSVN link: http://websvn.kde.org/?view=rev&revision=778530



Could you backport this to 3.5, too, please ?
Thanks a lot!
Comment 5 Thomas McGuire 2008-02-24 14:25:22 UTC
SVN commit 778728 by tmcguire:

Backport of SVN commit 778530 by tmcguire:

Don't crash after changing the layout and replying then.

CCBUG: 158171


 M  +4 -0      kmmainwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=778728
Comment 6 Stephan Johach 2008-02-25 16:37:12 UTC
SVN commit 779123 by johach:

Now the fix is in stable 3.5.x branch too.
Backport of SVN commit 778530 by tmcguire: 
 
Don't crash after changing the layout and replying then. 
 
CCBUG: 158171


 M  +4 -0      kmmainwidget.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=779123