Don't crash after changing the layout and replying then.

BUG: 158171

svn path=/trunk/KDE/kdepim/; revision=778530